--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "~15.4.0",
     "react-native": "0.41.2",
     "react-native-action-button": "^2.0.22",
+    "react-native-menu": "^0.20.2",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
