--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "dropbox": "^2.5.1",
     "react": "~15.4.0",
     "react-native": "0.41.2",
     "react-native-action-button": "^2.0.22",
