--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "dev": "react-native run-android; react-native start --reset-cache",
-    "test": "jest"
+    "test": "jest",
+    "flow": "flow"
   },
   "dependencies": {
     "dropbox": "^2.5.1",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
+    "flow-bin": "^0.37.0",
     "jest": "18.1.0",
     "react-test-renderer": "~15.4.0"
   },
