Fix dropbox upload via react-native-fetch-blob

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "~15.4.0",
     "react-native": "0.41.2",
     "react-native-action-button": "^2.0.22",
+    "react-native-fetch-blob": "^0.10.2",
     "react-native-menu": "^0.20.2",
     "react-native-vector-icons": "^4.0.0"
   },
