--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-action-button": "^2.0.22",
     "react-native-fetch-blob": "^0.10.2",
     "react-native-menu": "^0.20.2",
+    "react-native-prompt": "^1.0.0",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
