--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "notemx",
   "version": "0.0.1",
-  "private": true,
+  "description": "NoteMX is a note taking app for Android with Dropbox sync",
+  "author": "Jakub Dundalek",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dundalek/notemx"
+  },
+  "bugs": {
+    "url": "https://github.com/dundalek/notemx/issues"
+  },
+  "homepage": "https://github.com/dundalek/notemx#readme",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "dev": "react-native run-android; react-native start --reset-cache",
