--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "flow": "flow"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "~15.4.0",
     "react-native": "0.41.2",
     "react-native-action-button": "^2.0.22",
     "react-native-fetch-blob": "^0.10.2",
+    "react-native-material-design-searchbar": "dundalek/react-native-material-design-searchbar",
     "react-native-menu": "^0.20.2",
     "react-native-prompt": "^1.0.0",
     "react-native-vector-icons": "^4.0.0"
