--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,3 +6,6 @@ include ':app'
 
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+
+include ':react-native-share-menu', ':app'
+project(':react-native-share-menu').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-share-menu/android')
