--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-material-design-searchbar": "dundalek/react-native-material-design-searchbar",
     "react-native-menu": "^0.20.2",
     "react-native-prompt": "^1.0.0",
+    "react-native-share-menu": "^1.3.0",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
