--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-action-button": "^2.0.22",
     "react-native-fetch-blob": "^0.10.2",
     "react-native-material-design-searchbar": "dundalek/react-native-material-design-searchbar",
-    "react-native-menu": "^0.20.2",
+    "react-native-popup-menu": "^0.7.2",
     "react-native-prompt": "^1.0.0",
     "react-native-share-menu": "^1.3.0",
     "react-native-vector-icons": "^4.0.0"
